--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
     <head>
+            <link rel="stylesheet" href="styles.css">
         <title>Yvonne Lee's Portfolio</title>
       
         <nav>  <img src="images/logo.png">
-        <li> About</li>
+       <ul><li> About</li>
         <li> Skills</li>
         <li> Work</li>
         <li> Contact</li>
+    </ul> 
     </nav>
     </head>
     <body></body>
