--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <html>
     <head>
-            <link rel="stylesheet" href="styles.css">
+            <link rel="stylesheet" href="css/style.css">
         <title>Yvonne Lee's Portfolio</title>
-      
+      <div class="menu">
         <nav>  <img src="images/logo.png">
-       <ul><li> About</li>
-        <li> Skills</li>
-        <li> Work</li>
-        <li> Contact</li>
-    </ul> 
-    </nav>
+            <ul><li> About</li>
+             <li> Skills</li>
+             <li> Work</li>
+             <li> Contact</li>
+         </ul> 
+         </nav>
+      </div>
+        
     </head>
-    <body></body>
+    <body>
+      <img src="images/hero.jpg">
+    </body>
 </html>
