--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
     <head>
             <link rel="stylesheet" href="css/style.css">
         <title>Yvonne Lee's Portfolio</title>
-      <div class="menu">
-        <nav>  <img src="images/logo.png">
-            <ul><li> About</li>
-             <li> Skills</li>
-             <li> Work</li>
-             <li> Contact</li>
-         </ul> 
+      <div class="header">
+        <nav>  
+            <img class="logoImg" src="images/logo.png">
+            <ul>
+              <li> About</li>
+              <li> Skills</li>
+              <li> Work</li>
+              <li> Contact</li>
+            </ul> 
          </nav>
       </div>
         
     </head>
     <body>
-      <img src="images/hero.jpg">
+      <div >
+        <img class="heroImg" src="images/hero.jpg">
+        <p>YDesign? Because design is fun!</p>
+        <button>Download Resume</button>
+      </div>
     </body>
+    <footer>
+      <ul>
+        <li> About</li>
+        <li> Skills</li>
+        <li> Work</li>
+        <li> Contact</li>
+      </ul> 
+    </footer>
 </html>
