--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
       <div >
         <img class="heroImg" src="images/hero.jpg">
-        <p>YDesign? Because design is fun!</p>
+        <p>Y? Because design is fun!</p>
         <button>Download Resume</button>
       </div>
     </body>
